# pytest-tutorial

./: .gitignore  .pipirc  .pypirc  .viki_pypirc  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: .pypirc  .viki_pipirc  .viki_pypirc  python-package.yml
src/: wallet.py  wallet_test.py
src/myWallet.egg-info/: PKG-INFO
src/mylovelywallet.egg-info/: PKG-INFO  SOURCES.txt
src/wallet/: wallet.py  wallet_test.py
